[package]
name = "neon-serde"
version = "0.4.0"
authors = ["Gabriel Castro <dev@GabrielCastro.ca>"]
description = "Easily serialize object for use with neon"
license = "MIT"
repository = "https://github.com/GabrielCastro/neon-serde"
readme = "readme.md"

[dependencies]
serde = "1"
error-chain = "0.12"
neon = "0.9.1"
neon-runtime = "0.9.1"
neon-sys = "0.9.1"

[dependencies.num]
version = "0.4"
default-features = false

[dev-dependencies]
serde_derive = "1"
